name:                langtonant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dhilst/langtonant#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Hilst Selli
maintainer:          Daniel Hilst Selli
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable langtonant
  ghc-options: -threaded -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vty
                     , array
                     , process
                     , ansi-terminal
                     , optparse-applicative
                     , mtl
  other-modules: LangtonAnt, Common, GameOfLife
